test API endpoints

--- a/src/app/components/activity-list/activity-list.component.html
+++ b/src/app/components/activity-list/activity-list.component.html
@@ -15,7 +15,7 @@
                       </tr>
                   </thead>
                   <tbody>
-                      <tr *ngFor="let instance of activityList">
+                      <tr id="listResult" *ngFor="let instance of activityList">
                           <td>{{ instance.name }}</td>
                           <td>{{ instance.id }}</td>
                           <td>{{ instance.type }}</td>
