--- a/src/app/components/dashboard-aws/dashboard-aws.component.html
+++ b/src/app/components/dashboard-aws/dashboard-aws.component.html
@@ -1,7 +1,7 @@
 <div class="container dashboard-container">
     <div class="row">
       <div class="col-sm-12">
-        <span class="title">Dashboard - Server-side Pagination
+        <span id="spnTitle" class="title">Dashboard - Server-side Pagination
             <a class="btn btn-default" [routerLink]="['/dashboard']"> click here for client-side pagination</a>
         </span>
       </div>
