--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,8 +1,8 @@
 <div class="container dashboard-container">
   <div class="row">
     <div class="col-sm-12">
-      <span class="title">Dashboard - Client-side Pagination
-          <a class="btn btn-default" [routerLink]="['/dashboard-aws']"> click here for server-side pagination</a>
+      <span id="spnTitle" class="title">Dashboard - Client-side Pagination
+          <a id="lnkServerView" class="btn btn-default" [routerLink]="['/dashboard-aws']"> click here for server-side pagination</a>
       </span>
     </div>
   </div>
